# workshop

./: .dockerignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
demos/1-run-brer-raptor/: README.md
demos/2-scalems-radical-local/: README.md
demos/3-class-based-syntax/: README.md
demos/rp-frontera/: README.md
docker/: README.md  example-complete.dockerfile  jupyter.dockerfile  resource_local.json
examples/basic_ensemble/: basic_ensemble.py  rp_basic_ensemble.py
examples/scalems-simulation-analysis/: fold.py  fs-peptide.py
examples/simulation-analysis/: fold.py  fs-peptide.py
src/: CHANGELOG.rst  README.rst
src/scalems_workshop/: __init__.py  _abc.py  exceptions.py  helpers.py  py.typed  subgraph.py  util.py
src/scalems_workshop/commands/: executable.py
test/: test_executable.py
