[build-system]
requires = [
    "setuptools >= 42",
    "versioningit ~= 1.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.format]
distance = "{version}+{distance}.{vcs}{rev}"
dirty = "{version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]
default-tag = "1.0.0"
