[metadata]
name = scalems-workshop
version = attr: scalems_workshop.__version__
description = Demonstrate SCALE-MS data flow scripting and graph execution, for molecular science computational research protocols.
url = https://github.com/SCALE-MS/workshop/
author = SCALE-MS team
author_email = info@scalems.org
long_description = file: src/README.rst, src/CHANGELOG.rst, LICENSE
;keywords = one, two
;license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
zip_safe = True
packages = find:
package_dir =
    =src
install_requires =
    gmxapi>=0.3.1
    mpi4py
    numpy
    packaging
    radical.pilot

tests_require =
    build
    packaging
    pytest>=6.1.2

[options.package_data]
scalems-workshop = py.typed

[options.packages.find]
where = src
